--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
         <title>Momentum</title> 
     </head>
     <body>
+        <form id="login-form" class="hidden">
+            <input
+            required
+            maxlength="15"
+            type="text"
+            placeholder="Enter your name in this page."
+            size="30" />
+            <button>Submit</button>
+        </form>
+        <h1 id="greeting" class="hidden"></h1>
         <script src="app.js"></script>
     </body>
 </html>
