--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <title>Momentum</title> 
     </head>
     <body>
+        <h2 id="clock">00:00:00</h2>
         <form id="login-form" class="hidden">
             <input
             required
@@ -17,8 +18,16 @@
             size="30" />
             <button>Submit</button>
         </form>
-        <h2 id="clock">00:00:00</h2>
         <h1 id="greeting" class="hidden"></h1>
+        <form id="todo-form">
+            <input
+            required
+            maxlength="15"
+            type="text"
+            placeholder="Enter your todo for today."
+            size="30" />
+        </form>
+        <ul id="todo-list"></ul>
         <div id="quotes">
             <span></span>
             <span></span>
@@ -27,5 +36,6 @@
         <script src="js/clock.js"></script>
         <script src="js/quotes.js"></script>
         <script src="js/background.js"></script>
+        <script src="js/todo.js"></script>
     </body>
 </html>
